<resources>
    <string name="app_name">Chap2.2</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="pesan_makanan_lewat_aplikasi">Pesan makanan lewat aplikasi</string>
    <string name="list_menu_makan">List Menu Makan</string>
    <string name="ayam_bakar">Ayam Bakar</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="dan_dapatkan_diskonmu">dan dapatkan diskonmu</string>
    <string name="keranjang">Keranjang</string>
    <string name="user">User</string>
    <string name="iklan_discount_30">Iklan discount 30%</string>
    <string name="list_layout">list layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="button_edit">Button Edit</string>
    <string name="bacground">bacground</string>
    <string name="foto_menu">foto menu</string>
    <string name="textview">TextView</string>
    <string name="icon_store">icon store</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="minus">minus</string>
    <string name="_1">1</string>
    <string name="plus">plus</string>
    <string name="back">back</string>
    <string name="total_rp">Total: Rp</string>
    <string name="pesanan_berhasil">PESANAN BERHASIL</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
    <string name="total_pembayaran_rp">Total Pembayaran: Rp</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="hai">Hai</string>
    <string name="total_harga">Total Harga</string>
    <string name="rp">Rp</string>
    <string name="pesan">Pesan</string>
    <string name="konfirmasi_pesanann">Konfirmasi Pesanan</string>
    <string name="metoode_pengiriman">Metoode Pengiriman</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="tunai">Tunai</string>
    <string name="dikirim">Dikirim</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="logout">Logout</string>
    <string name="_50000">50000</string>
    <string name="delete">delete</string>
    <string name="welcome">WELCOME</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="crash">crash</string>
    <string name="register">REGISTER</string>


</resources>