<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.KonfirmasiPesananFragment">

    <TextView
        android:id="@+id/konfirmasiPesanan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border_white"
        android:gravity="center"
        android:text="@string/konfirmasi_pesanann"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_black"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/konfirmasiPesanan" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/metoode_pengiriman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/konfirmasiPesanan" />

    <Button
        android:id="@+id/button2"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ambil_sendiri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button5"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tunai"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dikirim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dompet_digital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKeranjang"
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/btnPesanFix"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/pesan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/metode_pembayaran"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/total_pembayaran_rp"
        app:layout_constraintBottom_toTopOf="@+id/btnPesanFix"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotallPembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

</androidx.constraintlayout.widget.ConstraintLayout>