<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="90dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_view_list"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/ayam_bakar"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/spaghetti_pasta" />

        <TextView
            android:id="@+id/tvMenuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/ayam_bakar"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_view_list"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_harga"
            style="@style/TeksKecilBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/_50000"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/rp"
            style="@style/TeksKecilBold"
            app:layout_constraintStart_toEndOf="@+id/img_view_list"
            app:layout_constraintTop_toBottomOf="@+id/tvMenuu" />

        <ImageView
            android:id="@+id/icMinus"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvTotalPesanann"
            app:layout_constraintTop_toTopOf="@+id/tvTotalPesanann"
            app:srcCompat="@drawable/minus"
            android:contentDescription="@string/minus" />

        <TextView
            android:id="@+id/tvTotalPesanann"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="4dp"
            android:text="@string/_0"
            app:layout_constraintEnd_toStartOf="@+id/icPlus"
            app:layout_constraintTop_toTopOf="@+id/icPlus"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/icPlus"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/plus"
            android:contentDescription="@string/plus" />

        <ImageView
            android:id="@+id/icDelete"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvMenuu"
            app:srcCompat="@drawable/ic_delete"
            android:contentDescription="@string/delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>