<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/spaghetti_pasta"
        android:contentDescription="@string/foto_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMenuu"
        style="@style/TeksBesarBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDetail" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMenuu" />

    <ImageView
        android:id="@+id/imageStore"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_store_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        android:contentDescription="@string/icon_store" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenuu" />

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaToko" />

    <Button
        android:id="@+id/buttonKeranjang"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tambah_ke_keranjang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        android:contentDescription="@string/bacground" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="272dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
        android:contentDescription="@string/bacground" />

    <ImageView
        android:id="@+id/icMinus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toTopOf="@+id/buttonKeranjang"
        app:layout_constraintEnd_toStartOf="@+id/tvTotal"
        android:contentDescription="@string/minus" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/icPlus"
        app:layout_constraintTop_toTopOf="@+id/icMinus" />

    <ImageView
        android:id="@+id/icPlus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTotal"
        android:contentDescription="@string/plus" />

    <TextView
        android:id="@+id/tvNamaToko"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textview"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageStore"
        app:layout_constraintTop_toTopOf="@+id/imageStore" />

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/imgDetail"
        app:layout_constraintTop_toTopOf="@+id/imgDetail"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/total_rp"
        app:layout_constraintBottom_toTopOf="@+id/buttonKeranjang"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>