<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@id/txtUsername" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txtNoTelp"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_telepon"
        app:layout_constraintStart_toStartOf="@+id/txtNoTelp"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:contentDescription="@string/bacground"
        android:src="@drawable/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/button_edit"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/txtNoTelp"
        app:layout_constraintStart_toStartOf="@+id/txtNoTelp"
        app:layout_constraintTop_toBottomOf="@+id/txtNoTelp" />


</androidx.constraintlayout.widget.ConstraintLayout>